			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04s: *********************************

BUG: (6/17/06, GVG) Missed drc errors on poly resistor with W=4 (Bug #1146)
FIX: Nothing to fix indeed. The poly can't be smaller that w=4. Added the rule in
the primitive

BUG: (6/17/06, GVG) If only primitive min size is violated, it should not saved
the DRC dates.

BUG: (6/17/06, GVG) NT_N clearance to OD not checked correctly (Bug# 1149)
FIX: NT_N.C.1 added  into TSMC180.xml

BUG: (6/17/06, GVG) Minimum NT_N spacing error missed (Bug# 1147)
FIX: NT_N.S.1 added into TSMC180.xml

IMP: (6/16/06, GVG) AFG working gap value in case of "only around" option.

BUG: (6/16/06, GVG) Extraction not working? (Bug#1141). Regressions won't catch the problem.
FIX: Wrong flag to kick the job

************************* Version 8.04r: *********************************

IMP/MAN: (6/15/06, SMR) New option in mimic stitching: bus widths must match.

BUG: (6/15/06, SMR) Exporting PNG of waveform window alters color scheme
FIX: In WaveformWindow.getPrintImage() reset colors only if set.

IMP: (6/14/06, DN) "File|Export|JELIB (Version 8.04k)" command in debug mode to save libraries in old Jelib format.

IMP: (6/14/06, GVG) ToolTips for 3D tab (Bug #215).

IMP: (6/14/06, RK) New experimental command: "Tool -> NCC -> Copy All Schematic Names to Layout" for Jonathan Gainsley

IMP/MAN: (6/14/06, SMR) Expressions allowed in Array dialog (Bug #1100).

BUG: (6/14/06, SMR) Mimic stitcher responds to its own arcs (Bug #1048, #1134).
FIX: Routing.endBatch() now ensures that the snapshot was not from the router.

BUG: (6/14/06, RK) I repaired the gate layout generator regression (Bugzilla# 1137)

IMP/MAN: (6/14/06, GVG) (a) Added extra flag in GDS import user preferences to have option
to simplify via contacts (for BIC). Only available in debug mode.