@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04s: *********************************
 
+IMP: (6/18/06, GVG) Generation regression got TemplateFill test and CMOSPLA test
+was moved to plugin package. Ability to run SaveLibrary in batch mode.
+
 BUG: (6/17/06, GVG) Missed drc errors on poly resistor with W=4 (Bug #1146)
 FIX: Nothing to fix indeed. The poly can't be smaller that w=4. Added the rule in
 the primitive
